fix: height and overflow

--- a/src/styles/supabase.scss
+++ b/src/styles/supabase.scss
@@ -17,6 +17,14 @@
         max-width: 100% !important;
     }
 
+    .h-full .sbui-modal-content > .sbui-space-row {
+        height: inherit !important;
+    }
+    
+    .h-full .sbui-modal-content > .sbui-space-row > .sbui-space-col {
+        height: inherit !important;
+    }
+
 
     @media screen and (min-width: 640px) {
         .sbui-modal-content>.sbui-space-row {
